fix: Edit button clickable, Alignment of Organisation Name and Add credential,Overview' title to be below as existing dashboard, Font size to match with existing dashboard, n iPad resolution , fix responsive issues

--- a/src/component/OrganisationDetails/style.scss
+++ b/src/component/OrganisationDetails/style.scss
@@ -45,3 +45,9 @@
     height: 170px;
     border: solid white 6px;
 }
+
+.gettingStarted {
+    .MuiInputBase-formControl {
+        margin-top: 0;
+    }
+}
